--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
                 </div>
                 <div class="button">
                     <button>Sign In</button>
-                    <div class="checkbox">
-                        <input type="checkbox">
-                        <span>Need help?</span>
+                    <div class="checkboxBlock">
+                        <div>
+                            <input type="checkbox">
+                            <span>Remember me</span>
+                        </div>
+                        <div>
+                            <span>Need help?</span>
+                        </div>
                     </div>
                 </div>
                 <div class="moreInfo">
