--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@
                     <button>Sign In</button>
                     <div class="checkboxBlock">
                         <div>
-                            <input type="checkbox">
+                            <input type="checkbox" checked>
                             <span>Remember me</span>
                         </div>
                         <div>
-                            <span>Need help?</span>
+                            <span>¿Need help?</span>
                         </div>
                     </div>
                 </div>
                 <div class="moreInfo">
                     <div>
-                        <span>New to Netflix?</span>
+                        <span class="letterSign">¿New to Netflix?</span>
                         <span>Sign up now.</span>
+                        <p class="letterP">This page is protected by Google reCAPTCHA to ensure you're not a robot. <a href="#">Learn more.</a></p>
                     </div>
                 </div>
             </div>
@@ -48,7 +49,7 @@
         <footer class="footer">
             <div class="block1">
                 <span>Questions?</span>
-                <span>Call 0800-509-417</span>
+                <span>Call 0800-123-456</span>
             </div>
             <div class="block2">
                 <a href="">FAQ</a>
