--- a/index.html
+++ b/index.html
@@ -48,19 +48,17 @@
 
         <footer class="footer">
             <div class="block1">
-                <span>Questions?</span>
-                <span>Call 0800-123-456</span>
+                <p>Questions? Call 0800 123 456</p>
             </div>
-            <div class="block2">
-                <a href="">FAQ</a>
-                <a href="">Help Center</a>
-                <a href="">Terms of use</a>
-                <a href="">Privacy</a>
-            </div>
-            <div class="block3">
-                <a href="">Cookie Preferences</a>
-                <a href="">Corporate Information</a>
-            </div>
+            <ul class="block2">
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Help Center</a></li>
+                <li><a href="">Terms of use</a></li>
+                <li><a href="">Privacy</a></li> <br>
+                <li><a href="">Cookie Preferences</a></li>
+                <li><a href="">Corporate Information</a></li>
+            </ul>
+            
         </footer>
     </div>
     
