--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="registerBlock">
             <div class="paddingBlock">
-                <div class="tittle">
+                <div class="title">
                     <h1>Sign In</h1>
                 </div>
                 <div class="inputs">
@@ -49,12 +49,12 @@
         <footer class="footer">
             <div class="block1">
                 <p>Questions? Call 0800 123 456</p>
-            </div>
+            </div> <br>
             <ul class="block2">
                 <li><a href="">FAQ</a></li>
                 <li><a href="">Help Center</a></li>
                 <li><a href="">Terms of use</a></li>
-                <li><a href="">Privacy</a></li> <br>
+                <li><a href="">Privacy</a></li>
                 <li><a href="">Cookie Preferences</a></li>
                 <li><a href="">Corporate Information</a></li>
             </ul>
